--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.4.0",
+    "@mui/x-date-pickers-pro": "^8.5.1",
     "@popperjs/core": "2.11.8",
     "@reduxjs/toolkit": "^1.9.6",
     "aos": "^2.3.4",
