--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
-    "@mobiscroll/react": "^5.34.2",
+    "@mobiscroll/react": "npm:@mobiscroll/react-next-trial@^5.34.2",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.4.0",
